--- a/view/common/header.html
+++ b/view/common/header.html
@@ -30,7 +30,7 @@
       <a href="#">고객지원<span class="arrow">▼</span></a>
       <ul class="hide nav_support_item_container">
         <li class="nav_support_item"><a href="/view/support/support.html">자료실</a></li>
-        <li class="nav_support_item"><a href="/view/common/not_ready.html">상담신청</a></li>
+        <li class="nav_support_item"><a href="/view/support/contact.html">상담신청</a></li>
       </ul>
     </li>
   </ul>
