--- a/view/admin/home/admin_section_main_section.html
+++ b/view/admin/home/admin_section_main_section.html
@@ -1,17 +1,28 @@
 <!-- css -->
+<link rel="stylesheet" href="/css/admin/home/admin_section.css">
 
 <section>
-  <form action="#" method="post">
-    <div>
-      <label for="title">메뉴명</label>
-      <input type="text" id="title" required>
-    </div>
-    <div>
-      <label for="caption">내용</label>
-      <textarea id="caption" cols="30" rows="5" required></textarea>
-    </div>
-    <button id="button_submit_section_item" type="button">confirm</button>
-  </form>
+  <div class="file_upload_modal_window hidden">
+    <div class="loader"></div>
+  </div>
+  <div class="form_container">
+    <form action="#" method="post">
+      <div>
+        <label for="img"></label>
+        <input id="img" class="" type="file" accept=".jpg">
+        <img class="preview" src="" alt="미리보기">
+      </div>
+      <div>
+        <label for="title">메뉴명</label>
+        <input type="text" id="title" required>
+      </div>
+      <div>
+        <label for="caption">내용</label>
+        <textarea id="caption" cols="30" rows="5" required></textarea>
+      </div>
+      <button id="button_submit_section_item" type="button">confirm</button>
+    </form>
+  </div>
 </section>
 
 <!-- js -->
