--- a/view/support/contact.html
+++ b/view/support/contact.html
@@ -19,6 +19,8 @@
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-storage.js"></script>
+<!-- mailJs -->
+<script type="text/javascript"src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
 </head>
 <body>
   <!-- 모달창 -->
@@ -31,7 +33,7 @@
     <header class="header" include-html="/view/common/header.html"></header>
     
     <!-- 화면 중앙 콘텐츠 부분 -->
-    <main class="main" include-html="/view/introduce/introduce_main_section.html"></main>
+    <main class="main" include-html="/view/support/contact_main_section.html"></main>
 
     <!-- 하단 nav 부분 -->
     <nav class="footer_nav" include-html="/view/common/footer_nav.html"></nav>
@@ -41,6 +43,5 @@
   </div>
   <script type="text/javascript" src="/js/common/include.js"></script>
   <script>includeHTML();</script>
-  <script src="/js/introduce/introduce_member.js"></script>
 </body>
 </html>
