--- a/view/support/post/post_main_section.html
+++ b/view/support/post/post_main_section.html
@@ -19,7 +19,7 @@
       <span class="post_user">대일노무법인</span>
     </div>
     <div class="post_body">
-      <span class="file">첨부파일 다운로드<a href="#" target="_sub"></a></span>
+      <span class="file">첨부파일 다운로드<a href="#" target="_blank"></a></span>
       <span class="context">내용</span>
     </div>
   </div>
