--- a/view/support-fund/index.html
+++ b/view/support-fund/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>대일노무법인</title>
+<title>대일노무법인 - 정부지원금</title>
 <!-- favicon -->
 <link rel="shortcut icon" href="/images/common/favicon.ico" type="image/x-icon">
 <!-- css -->
@@ -22,16 +22,16 @@
 </head>
 <body>
   <!-- 모달창 -->
-  <div class="modal_window">
+  <!-- <div class="modal_window">
     <div class="loader"></div>
-  </div>
+  </div> -->
   
   <div class="grid_container">
     <!-- 화면 상단 부분 -->
-    <header class="header" include-html="/view/common/header.html"></header>
+    <header class="header" include-html="/view/support-fund/fund_header.html"></header>
     
     <!-- 화면 중앙 콘텐츠 부분 -->
-    <main class="main" include-html="/view/introduce/introduce_main_section.html"></main>
+    <main class="main" include-html="/view/support-fund/fund_main.html"></main>
 
     <!-- 하단 nav 부분 -->
     <nav class="footer_nav" include-html="/view/common/footer_nav.html"></nav>
@@ -41,6 +41,5 @@
   </div>
   <script type="text/javascript" src="/js/common/include.js"></script>
   <script>includeHTML();</script>
-  <script src="/js/introduce/introduce_member.js"></script>
 </body>
 </html>
